from enum import IntEnum

class Players(IntEnum):
    """Initializes players 
    """
    BLACK_DISK = 1
    WHITE_DISK = 2 

