@startuml Reversi

class ReversiGame{
    -board_size
    +change_player()
    +is_valid_move()
    +make_move()
    +get_moves()
    +get_winner()
    +is_terminated()
}

class Board{
    -size
    +get_location()
    +update_location()
    +valid_location()
    +get_scores()
}

class Players{
    BLACK_DISK
    WHITE_DISK
}

class AI{
    -game 
    +get_move()
}

class AdvancedAI{
    -game 
    +get_move()
}

class UserPlayer{
    +get_move()
}

class GameView{
    -game
    +get_move()
    +draw_board()
    +display_winner()
}

class BoardView{
    -board
    +draw_board()
}

class GameController{
    -model
    -view
    +run_game()
}

GameController o-- ReversiGame
ReversiGame o-- Board
ReversiGame o-- Players
BoardView o-- Board
GameView o-- BoardView
GameView o-- ReversiGame
GameController o-- GameView
AI o-- ReversiGame
AdvancedAI o-- ReversiGame
GameController o-- AdvancedAI
GameController o-- AI 
GameController o-- UserPlayer

@enduml 